# Projects

./: README.md  difficulties.txt  ideas and progress.txt  minesweeper.py
Algorithms and Data Structures/Assignment 3/: Experimentation.docx  Raw Data.docx  Tables and Graphs.xlsx  ~$Tables and Graphs.xlsx  ~$perimentation.docx
Algorithms and Data Structures/Assignment 3/basecode/: CMakeLists.txt  Makefile  output.txt  pegsol  valgrind-out.txt
Algorithms and Data Structures/Assignment 3/basecode/src/: ai.c  list.c  stack.c
Algorithms and Data Structures/Assignment 3/submission test/: Makefile  peg_solitaire.c
Algorithms and Data Structures/Assignment 3/submission test/src/: ai.c  ai.h  list.c  list.h  utils.c  utils.h
Elements of Data Processing/Assignment 1/: README.md  parta1.py  parta2.py  partb1.py  partb2.py  partb3.py  partb4.py  partb5.py
Elements of Data Processing/Assignment 2/: README.md
Elements of Data Processing/Assignment 2/datasets/: CovidCases.csv  readme.txt
Elements of Data Processing/Assignment 2/datasets/AirQuality2020/: AirQualityAlphington.csv  AirQualityAltonaNorth.csv  AirQualityBrooklyn.csv  AirQualityChurchill.csv  AirQualityDandenong.csv  AirQualityFootscray.csv  AirQualityMoe.csv  (+9 more)
Leetcode/: 121. Best Time to Buy and Sell Stock.py  128. Longest Consecutive Sequence.py  17. Letter Combinations of a Phone Number.py  200. Number of Islands.py  21. Merge Two Sorted Lists.py  3. Longest Substring without Repeating Characters.py  55. Jump Game.py  75. Sort Colours.py
OOP Practice/: main.py  utils.py
Winterhack 2021/: minesweeper.py
